test/spec_vectors/simd_f32x4_rounding/fail/module_23.wat
(module (func $f32x4.trunc-arg-empty (result v128) (f32x4.trunc)))